add spreadsheet integration

--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.0.6/schema.json",
   "vcs": {
     "enabled": false,
     "clientKind": "git",
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": []
+    "includes": ["**"]
   },
   "formatter": {
     "enabled": true,
@@ -15,11 +15,9 @@
     "indentStyle": "space",
     "indentWidth": 2,
     "lineWidth": 120,
-    "ignore": ["**/fixtures/*/*.json", "**/*.min.js"]
+    "includes": ["**", "!**/fixtures/**/*/*.json", "!**/*.min.js"]
   },
-  "organizeImports": {
-    "enabled": true
-  },
+  "assist": { "actions": { "source": { "organizeImports": "on" } } },
   "linter": {
     "enabled": true,
     "rules": {
@@ -28,7 +26,17 @@
         "noArrayIndexKey": "off"
       },
       "style": {
-        "useImportType": "warn"
+        "useImportType": "warn",
+        "noParameterAssign": "error",
+        "useAsConstAssertion": "error",
+        "useDefaultParameterLast": "error",
+        "useEnumInitializers": "error",
+        "useSelfClosingElements": "error",
+        "useSingleVarDeclarator": "error",
+        "noUnusedTemplateLiteral": "error",
+        "useNumberNamespace": "error",
+        "noInferrableTypes": "error",
+        "noUselessElse": "error"
       },
       "correctness": {
         "useExhaustiveDependencies": "off"
@@ -41,7 +49,7 @@
       "enabled": true,
       "quoteStyle": "double",
       "arrowParentheses": "always",
-      "trailingComma": "all",
+      "trailingCommas": "all",
       "lineEnding": "crlf"
     },
     "parser": {
