--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.7",
+    "@tanstack/react-query": "^5.87.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "googleapis": "^159.0.0",
     "locomotive-scroll": "5.0.0-beta.15",
     "lucide-react": "^0.511.0",
     "motion": "^12.12.1",
@@ -26,7 +29,7 @@
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
+    "@biomejs/biome": "2.0.6",
     "@types/locomotive-scroll": "^4.1.3",
     "@types/node": "^20",
     "@types/react": "^19",
