--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
     "@tailwindcss/postcss": "^4.1.7",
+    "@tanstack/react-form": "^1.25.0",
     "@tanstack/react-query": "^5.87.4",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
