--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
-    "@react-three/drei": "^10.7.6",
+    "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
     "@tailwindcss/postcss": "^4.1.7",
     "@tanstack/react-form": "^1.25.0",
@@ -24,7 +24,7 @@
     "locomotive-scroll": "5.0.0-beta.15",
     "lucide-react": "^0.511.0",
     "motion": "^12.12.1",
-    "next": "15.1.8",
+    "next": "^16.0.3",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
