--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# Application URL
+# Set this to your production URL when deploying
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+
 # Google Sheets API Configuration
 # Get these credentials from Google Cloud Console
 # 1. Create a project in Google Cloud Console
