--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/postcss": "^4.1.7",
     "@tanstack/react-form": "^1.25.0",
     "@tanstack/react-query": "^5.87.4",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
