--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "locomotive-scroll": "5.0.0-beta.15",
     "lucide-react": "^0.511.0",
     "motion": "^12.12.1",
-    "next": "^16.0.3",
+    "next": "16.0.7",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
