--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "wedding-invitation",
   "version": "0.1.0",
   "private": true,
+  "overrides": {
+    "jws": ">=4.0.1"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -13,40 +16,40 @@
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-slot": "^1.2.4",
     "@react-three/drei": "^10.7.7",
-    "@react-three/fiber": "^9.4.0",
-    "@tailwindcss/postcss": "^4.1.7",
-    "@tanstack/react-form": "^1.25.0",
-    "@tanstack/react-query": "^5.87.4",
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/speed-insights": "^1.2.0",
+    "@react-three/fiber": "^9.4.2",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@tanstack/react-form": "^1.27.3",
+    "@tanstack/react-query": "^5.90.12",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "googleapis": "^159.0.0",
     "locomotive-scroll": "5.0.0-beta.15",
     "lucide-react": "^0.511.0",
-    "motion": "^12.12.1",
-    "next": "16.0.7",
+    "motion": "^12.23.26",
+    "next": "16.0.10",
     "next-themes": "^0.4.6",
-    "postcss": "^8.5.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "postcss": "^8.5.6",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-smoke": "^1.2.0",
-    "sonner": "^2.0.3",
-    "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.7",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.18",
     "three": "^0.180.0",
-    "zod": "^4.1.12"
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@biomejs/biome": "2.0.6",
-    "@types/locomotive-scroll": "^4.1.3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/locomotive-scroll": "^4.1.4",
+    "@types/node": "^20.19.26",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@types/three": "^0.180.0",
-    "tw-animate-css": "^1.3.0",
-    "typescript": "^5"
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.3"
   }
 }
